services/ae_anno_detection/model_serving/kubernetes/ml-ae-anno-detection.stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  # This name uniquely identifies the stateful set
  name: ml-ae-anno-detection-stateful
  labels:
    app: ml-ae-anno-detection
spec:
  serviceName: ml-ae-anno-detection
  replicas: 1
  selector:
    matchLabels:
      app: ml-ae-anno-detection
  template:
    metadata:
      labels:
        app: ml-ae-anno-detection
    spec:
      containers:
      - name: ml-ae-anno-detection
        image: ghcr.io/csia-pme/csia-pme-ml-ae-anno-detection:latest
        # If you build the image locally, change the next line to `imagePullPolicy: Never` - there is no need to pull the image
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
