services/ae_anno_detection/model_serving/kubernetes/ml-ae-anno-detection.service.yml
apiVersion: v1
kind: Service
metadata:
  name: ml-ae-anno-detection-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8383
      targetPort: 80
      protocol: TCP
  selector:
    app: ml-ae-anno-detection
