services/ae_anno_detection/model_serving/kubernetes/ml-ae-anno-detection.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-ae-anno-detection-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    nginx.org/client-max-body-size: "16m"
spec:
  rules:
  - host: ml-ae-anno-detection-csia-pme.kube.isc.heia-fr.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stat-anno-detection-service
            port:
              number: 80
  tls:
    - hosts:
        - ml-ae-anno-detection-csia-pme.kube.isc.heia-fr.ch
